Added Qodana Project Scan and refactored push workflow