@@ -1,9 +1,4 @@
 import com.github.benmanes.gradle.versions.updates.DependencyUpdatesTask
-import org.asciidoctor.gradle.jvm.AbstractAsciidoctorTask.JAVA_EXEC
-import org.asciidoctor.gradle.jvm.AsciidoctorTask
-import org.asciidoctor.gradle.jvm.epub.AsciidoctorEpubTask
-import org.asciidoctor.gradle.jvm.epub.AsciidoctorEpubTask.EPUB3
-import org.asciidoctor.gradle.jvm.pdf.AsciidoctorPdfTask
 import org.slf4j.LoggerFactory
 import java.util.*
 
@@ -15,17 +10,10 @@ val versionOfLogback: String by project
 
 val asciidoctorJDiagramVersion: String by project
 
-val adocJvmParams =
-    listOf(
-        "--add-opens",
-        "java.base/sun.nio.ch=ALL-UNNAMED",
-        "--add-opens",
-        "java.base/java.io=ALL-UNNAMED",
-    )
-
 private val log by lazy { LoggerFactory.getLogger("ai.gervi.hera.vitr.build") }
 
 plugins {
+    `kotlin-dsl` apply false
     id("com.github.ben-manes.versions")
 
     kotlin("jvm")
@@ -34,10 +22,10 @@ plugins {
     id("io.ktor.plugin") apply false
     id("org.jetbrains.kotlin.plugin.serialization") apply false
 
-    id("org.asciidoctor.jvm.pdf")
-    id("org.asciidoctor.jvm.gems")
-    id("org.asciidoctor.jvm.epub")
-    id("org.asciidoctor.jvm.convert")
+    id("org.asciidoctor.jvm.pdf") apply false
+    id("org.asciidoctor.jvm.gems") apply false
+    id("org.asciidoctor.jvm.epub") apply false
+    id("org.asciidoctor.jvm.convert") apply false
 }
 
 allprojects {
@@ -53,6 +41,7 @@ java {
 }
 
 dependencies {
+    implementation(gradleApi())
     implementation(platform(kotlin("bom")))
 
     api("org.slf4j:slf4j-api:$versionOfSlf4j")
@@ -62,28 +51,6 @@ dependencies {
     testImplementation(platform(kotlin("bom")))
     testImplementation(kotlin("test"))
 }
-
-listOf(
-    tasks.withType<AsciidoctorTask>(),
-    tasks.withType<AsciidoctorPdfTask>(),
-    tasks.withType<AsciidoctorEpubTask>(),
-).forEach {
-    it.configureEach {
-        setExecutionMode(JAVA_EXEC)
-        jvm { jvmArgs(adocJvmParams) }
-
-        isLogDocuments = true
-        baseDirFollowsSourceDir()
-        setSourceDir(file("src/docs/asciidoc"))
-        sources(
-            delegateClosureOf<PatternSet> {
-                include("journey.adoc")
-            },
-        )
-    }
-}
-
-tasks.withType<AsciidoctorEpubTask>().configureEach { ebookFormats(EPUB3) }
 
 tasks.named<DependencyUpdatesTask>("dependencyUpdates").configure {
     checkForGradleUpdate = true
